@@ -11,7 +11,9 @@
 - fixed bug [ 2164438 ] SerializableField bug when dealing with private fields
 - fixed bug [ 2166232 ] JPAAnnotationsConfigurer should use AssertValidCheck for @ManyToMany
 - fixed bug [ 2192175 ] Validator.validate checks the same object multiple times
- 
+* upgraded Spring 2.5.6, Groovy 1.5.7, MVEL 1.3.15, Paranamer 1.1.5, jRuby 1.1.4
++ added support for multi-valued constraints
+
 2008-08-10 v1.30
 ================
 - fixed an StackOverflowError that occurs when referencing the same property via _this.<property_name> in scripted pre/post conditions
